--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Simon Ruske</title>
-  <base href="personal-website">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://simonruske.github.io/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.287599d961c8a9e30ec3.css"></head>
