--- a/index.html
+++ b/index.html
@@ -3,20 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Simon Ruske</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/simonruske.github.io/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.287599d961c8a9e30ec3.css"></head>
-<script>
-  (function(){
-    var redirect = sessionStorage.redirect;
-    delete sessionStorage.redirect;
-    if (redirect && redirect != location.href) {
-      history.replaceState(null, null, redirect);
-    }
-  })();
-</script>
 <body>
   <app-root></app-root>
 <script src="runtime-es2015.c9afb3256f2870e161de.js" type="module"></script><script src="runtime-es5.c9afb3256f2870e161de.js" nomodule defer></script><script src="polyfills-es5.b5e7164ef2fcfa3ddf98.js" nomodule defer></script><script src="polyfills-es2015.2c0ac050780efa9309ed.js" type="module"></script><script src="main-es2015.16f64b1ea443533f1167.js" type="module"></script><script src="main-es5.16f64b1ea443533f1167.js" nomodule defer></script></body>
