--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Simon Ruske</title>
-  <base href="/simonruske.github.io/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Simon T Ruske</title>
+  <base href="/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.287599d961c8a9e30ec3.css"></head>
